Add option to exclude hidden files from the transfer
