# internal/api/design/batch.go
@@ -18,6 +18,7 @@ var _ = Service("batch", func() {
 			Attribute("completed_dir", String)
 			Attribute("retention_period", String)
 			Attribute("reject_duplicates", Boolean, func() { Default(false) })
+			Attribute("exclude_hidden_files", Boolean, func() { Default(false) })
 			Attribute("transfer_type", String)
 			Attribute("process_name_metadata", Boolean, func() { Default(false) })
 			Attribute("depth", Int, func() {
