# internal/api/gen/http/openapi3.yaml
@@ -39,6 +39,7 @@ paths:
                         example:
                             completed_dir: abc123
                             depth: 1
+                            exclude_hidden_files: false
                             path: abc123
                             pipeline: abc123
                             process_name_metadata: false
@@ -1154,6 +1155,10 @@ components:
                     default: 0
                     example: 1
                     minimum: 0
+                exclude_hidden_files:
+                    type: boolean
+                    default: false
+                    example: false
                 path:
                     type: string
                     example: abc123
@@ -1180,6 +1185,7 @@ components:
             example:
                 completed_dir: abc123
                 depth: 1
+                exclude_hidden_files: false
                 path: abc123
                 pipeline: abc123
                 process_name_metadata: false
